=head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
  Added patch to fix a number of harmless, but annoying, GCC warnings from Eric Simon
  Added (finally) ora_verbose for DBD only tracking from John Scoles and thanks to H.Merijn Brand
  Fix for rt.cpan.org Ticket #=32396 from John Scoles
  Fix for memory leak that snuck into 1.21 from John Scoles
  Fix for rt.cpan.org Ticket #=36069: Problem with synonym from John Scoles
  Fix for rt.cpan.org Ticket #=28811 ORA_CHAR(s) not returning correct length in functions and procedures from John Scoles
  Makefile.PL now working without flags for Linux 11.1.0.6 instant client and regular client from John Scoles, Andy Sautins, H.Merijn Brand, Nathan Vonnahme and Karun Dutt
  Fixed how persistant lob fetch works now uses callback correctly, from John Scoles & Darren Kipp

  
=head1 Changes in DBD-Oracle 1.21(svn rev 11067) 11th April 2008 
  Added Notes to README.win32.txt on installing Instant Client 11.1.0.6.0 from John Scoles
  Added the oci_typecode_name method to get the name rather than just the number of an OCI_TYPECODE from John Scoles
  Fixed a unreported bug with Embedded Objects from John Scoles
  Fixes for #34621 & 33791 from RT cpan 
  Added patch to allow faster fetch from REF CURSORs from Biswadeep Chowdhury
  Updated the Todo file for next version from John Scoles
  Added support for the 10.2 Data Interface for Persistent LOBs by John Scoles
  Changed the way pre-fetching is done by John Scoles
  Added support for Scrollable cursors from John Scoles
  Changed the max size of cache_rows to a sb4 rather than a int and or a ub4 from John Scoles
  Added support for Lobs in select of OCI Embedded Objects from John Scoles with a big thankyou to  Paul Weiss 
  Fixed for embedded object in object from Paul Weiss
  Added support for direct insert of large XML data into XMLType fields from Hendrik Fuss & John Scoles