@@ -1,4 +1,5 @@
 =head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
+  Added comment to POD on case sensitivity of ORACLE environment variables suggested by Gerhard Lausser
   Added patch to fix a number of harmless, but annoying, GCC warnings from Eric Simon
   Added (finally) ora_verbose for DBD only tracking from John Scoles and thanks to H.Merijn Brand
   Fix for rt.cpan.org Ticket #=32396 from John Scoles
@@ -6,7 +7,7 @@
   Fix for rt.cpan.org Ticket #=36069: Problem with synonym from John Scoles
   Fix for rt.cpan.org Ticket #=28811 ORA_CHAR(s) not returning correct length in functions and procedures from John Scoles
   Makefile.PL now working without flags for Linux 11.1.0.6 instant client and regular client from John Scoles, Andy Sautins, H.Merijn Brand, Nathan Vonnahme and Karun Dutt
-  Fixed how persistant lob fetch works now uses callback correctly, from John Scoles & Darren Kipp
+  Fixed how persistent lob fetch works now uses callback correctly, from John Scoles & Darren Kipp
 
   
 =head1 Changes in DBD-Oracle 1.21(svn rev 11067) 11th April 2008 
